examples/auth/private-inbox-jwt/cli/output.txt
[ OK ] generated and stored operator key "OC5KJIPAQXUITKHZDVUYPR2SVKKNITQR7GS5JPBJK75EJXFP3DOTMT4T"
[ OK ] added operator "local"
[ OK ] When running your own nats-server, make sure they run at least version 2.2.0
[ OK ] created operator signing key: OBPSJU5F4SSC3WYQVKFIXXYRR3IU5ZJGHQJGQNVNT5LBIFRS74F72B76
[ OK ] created system_account: name:SYS id:ADOUJTG6GNZIFNLSTBJMYJV22P6TZRACKJ53GD6ZH2GTRYFKQYKXGEB5
[ OK ] created system account user: name:sys id:UDY5BKF4SIEGD7WQMYK3UHJJIQKU27H4JPQJ7PCJBZVM5IGZMOI2SC7L
[ OK ] system account user creds file stored in `/nsc/nkeys/creds/local/SYS/sys.creds`
[ OK ] strict signing key usage set to: true
[ OK ] set account jwt server url to "nats://nats:4222"
[ OK ] edited operator "local"
[ OK ] generated and stored account key "ACVUNDAK7RC6CC4PCVTB4YXZMLJLWHHFJIUDLYL3DSNUTQWM42XJ5ZDB"
[ OK ] added account "APP"
[ OK ] added signing key "ACNE2SRGY53JFAY2ZSZBQ4QSKVZOC6XCSP5SKMJ32XLUO7U4XIJJI7CQ"
[ OK ] edited account "APP"
[ERR ] push to nats-server "nats://nats:4222" using system account "SYS":
       [ERR ] push APP to nats-server with nats account resolver:
              [ERR ] failed to get response to push account: nats: no responders available for request
              [ OK ] pushed to a total of 0 nats-server
Error: all jobs failed
[ OK ] set max responses to 1
[ OK ] added sub "services.greet"
[ OK ] generated and stored user key "UDAG4DP5LKNA3W2WOIIML2H5T5S3JZ6VXVJ3NVBXQNPWA6HSCSIEIBDS"
[ OK ] generated user creds file `/nsc/nkeys/creds/local/APP/greeter.creds`
[ OK ] added user "greeter" to account "APP"
[ OK ] added pub "joe.>"
[ OK ] added pub "services.*"
[ OK ] generated and stored user key "UB2AW6AGODL252O4XSA7J5FJLTKQMT26GWPCRQFCMW4DFQRF34GGCIMZ"
[ OK ] generated user creds file `/nsc/nkeys/creds/local/APP/joe.creds`
[ OK ] added user "joe" to account "APP"
[ OK ] added pub "pam.>"
[ OK ] added pub "services.*"
[ OK ] generated and stored user key "UD5HTH3AGP5YJIR255MYPJUP7GMVQRSH36JC5UMW3XLP773IGXMJDCRK"
[ OK ] generated user creds file `/nsc/nkeys/creds/local/APP/pam.creds`
[ OK ] added user "pam" to account "APP"
[ OK ] added sub "_INBOX.>"
[ OK ] generated user creds file `/nsc/nkeys/creds/local/APP/joe.creds`
[ OK ] edited user "joe"
[ OK ] added sub "_INBOX.>"
[ OK ] generated user creds file `/nsc/nkeys/creds/local/APP/pam.creds`
[ OK ] edited user "pam"
NATS Configuration Context "greeter"

      Server URLs: nats://nats:4222
      Credentials: /nsc/nkeys/creds/local/APP/greeter.creds (OK)
       NSC Lookup: nsc://local/APP/greeter
             Path: /nsc/.config/nats/context/greeter.json

WARNING: Shell environment overrides in place using NATS_URL
NATS Configuration Context "joe"

      Server URLs: nats://nats:4222
      Credentials: /nsc/nkeys/creds/local/APP/joe.creds (OK)
       NSC Lookup: nsc://local/APP/joe
             Path: /nsc/.config/nats/context/joe.json

WARNING: Shell environment overrides in place using NATS_URL
NATS Configuration Context "pam"

      Server URLs: nats://nats:4222
      Credentials: /nsc/nkeys/creds/local/APP/pam.creds (OK)
       NSC Lookup: nsc://local/APP/pam
             Path: /nsc/.config/nats/context/pam.json

WARNING: Shell environment overrides in place using NATS_URL
16:31:30 Listening on "services.greet" in group "NATS-RPLY-22"
16:31:30 Sending request on "services.greet"
16:31:30 [#0] Received on subject "services.greet":


16:31:30 Received with rtt 317.947µs
Reply 48oLGqEJss14pwGkWQtl1Z

16:31:30 Sending request on "services.greet"
16:31:30 [#1] Received on subject "services.greet":


16:31:30 Received with rtt 248.888µs
Reply 48oLGqEJss14pwGkWQtl6e

16:31:30 Subscribing on _INBOX.> 
16:31:30 Sending request on "services.greet"
16:31:30 [#2] Received on subject "services.greet":


16:31:30 Received with rtt 981.705µs
Reply 48oLGqEJss14pwGkWQtlBj

[#1] Received on "_INBOX.EtvfNPpB0Z3H2IsW0Q4jfH.nbqqU7n8"
Reply 48oLGqEJss14pwGkWQtlBj

16:31:30 Sending request on "services.greet"
16:31:30 [#3] Received on subject "services.greet":


Reply 48oLGqEJss14pwGkWQtlGo

16:31:30 Received with rtt 237.875µs
[ OK ] added sub "_INBOX_joe.>"
[ OK ] added deny sub "_INBOX.>"
[ OK ] generated user creds file `/nsc/nkeys/creds/local/APP/joe.creds`
[ OK ] edited user "joe"
[ OK ] added sub "_INBOX_pam.>"
[ OK ] added deny sub "_INBOX.>"
[ OK ] generated user creds file `/nsc/nkeys/creds/local/APP/pam.creds`
[ OK ] edited user "pam"
16:31:31 Subscribing on _INBOX.> 
^C